import org.gradle.api.tasks.testing.Test

plugins {
    // Apply the Java plugin for compiling Java sources
    id 'java'
    // Spring Boot plugin for auto-configuration and executable jars
    id 'org.springframework.boot' version '3.3.5'
    // Manage dependency versions via Spring dependency management plugin
    id 'io.spring.dependency-management' version '1.1.7'
}

// Maven groupId for generated artifacts
group = 'com.planit'
// Snapshot version used during development
version = '0.0.1-SNAPSHOT'
// Project description
description = 'Planit Backend'

java {
    // Configure the Java toolchain to use Java 21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    // Ensure compileOnly scope also receives annotation processors
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    // Use Maven Central as the main dependency repository
    mavenCentral()
}

dependencies {
    // Web and JPA support
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Bean validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'com.h2database:h2'

    // MySQL JDBC driver for runtime
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // AWS SDK S3
    implementation 'software.amazon.awssdk:s3:2.20.81'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    enabled = true
}
